Projet GL/Projet_GL/src/test/deca/context/valid/increment2/bool-eq-bool.deca
// Test bool == bool

// Historique : cree le 11/01/2023

{
    boolean a = true, b = false;

    boolean c = a == b;

    boolean d = a == b == c == a;
}